fix: DEV-3919: Fix overflow to show Settings and Volume popups to audioform

--- a/src/components/SidePanels/SidePanels.styl
+++ b/src/components/SidePanels/SidePanels.styl
@@ -6,8 +6,7 @@
   &__content
     height 100%
     position relative
-    z-index 1
-    overflow auto
+    z-index 2
     styled-scrollbars()
 
     &_resizing
